Feat: main contact information in endpoints (#154)
* feat: add main conrtact info to gest questioning details

* feat: add main contact information to get contacts by surveyUnit

* test: fix tests

* test: fix tests to remove use of view

* fix: dto isMain

* fix: group results by main character

* test: add test for multiple contact lines  for the same contact when accredited according to main character

* build: version 3.16.0

* fix: test merge conflict